--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="app">
             <h1>PhoneGap</h1>
-            <form id="formulario" name="formulario" method="post" action="PHPServer/registro.php">
+            <form id="formulario" name="formulario" method="post" action="https://net.agenciajaque.com/public/registrarmovil">
                 <p><input type="text" id="name" name="name" placeholder="Nombre" required></p>
                 <p><input type="text" id="email" name="email" placeholder="Correo" required></p>
                 <p><input type="text" name="regId" id="regId" readonly="readonly" placeholder="regId"></p>
@@ -24,7 +24,7 @@
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="PushNotification.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="index.js"></script>
         <script type="text/javascript">
         //El registro al servicio de google lo hacemos automáticamente
         app.initialize();
