--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="PushNotification.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="index.js"></script>
         <script type="text/javascript">
         //El registro al servicio de google lo hacemos automáticamente
         app.initialize();
